syntax = "proto3";

package message_v1;
option go_package = "careerhub/queue/message_v1";

message ClosedJobPostings{
    repeated JobPostingId jobPostingIds = 1;
}

message JobPostingId{
    string site = 1;
    string postingId = 2;
}